--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>dddj is</title>
+        <title>STEVENMUGENIWEBSITE</title>
         <style text/css>
             body{
                 background: url('https://i.ibb.co/gMRZBdX/0468c845be2c976058d0ac664c15cc08.jpg') center center/cover;
